overlays/argocd-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
  annotations:
    sidecar.istio.io/inject: "false"
