overlays/argocd-server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
  name: argocd-server
spec:
  ports:
  - name: https
    $patch: delete
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
